--- a/fullstack/tetris/index.html
+++ b/fullstack/tetris/index.html
@@ -7,7 +7,7 @@
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="tetris.css"></link>
     <title>Sad Beige Tetris</title>
-    <audio autoplay loop><source src="Tetris.mp3" type="audio/mpeg"></audio>
+    <audio autoplay loop id="audio"><source src="Tetris.mp3" type="audio/mpeg"></audio>
   </head>
   <body>
     <div class="buffer">
